# percolator-probe

./: .gitignore  README.md  github-issue-draft.md
docs/: advanced-attack-plan.md  reconnaissance.md
findings/: F1-oracle-clamp-disabled-mainnet.md  F2-genmin-patch-adjacent-gap.md  a2-extended-analysis.md  a2-victim-cranks-analysis.md  c2-mul-div-div-zero-sweep.md  e2-pyth-conf-filter.md  precision-loss-adl-mult.md  precision-observations.md
probes/: 01-oracle-stale-timing-arb.md  02-crank-atomicity-dos.md  03-state-desync-salami-slicing.md  19-im-bypass-on-flip.md  20-mm-boundary-off-by-one.md  NEXT.md
re/: strings.txt
scripts/: verify-mainnet-config.sh
tool/: Cargo.toml  README.md
tool/src/: audit.rs  bst.rs  dispatch.rs  main.rs  report.rs  sbf.rs
