[package]
name = "percolator-re"
version = "0.1.0"
edition = "2021"
description = "RE harness for immutable Solana programs — disassemble, dispatch-map, handler-index, CPI-graph"

[[bin]]
name = "percolator-re"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
goblin = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
